# cookiecutter-snoap

./: LICENSE.MD  README.md  cookiecutter.json
.github/workflows/: python-app.yml  test.yml
hooks/: post_gen_project.py
test/: test_cookiecutter_snoap.py
{{ cookiecutter.project_slug }}/: .gitignore  pyproject.toml  readme.md  tox.ini
{{ cookiecutter.project_slug }}/.github/workflows/: main.yaml
{{ cookiecutter.project_slug }}/test/: test_paths.py
{{ cookiecutter.project_slug }}/{{ cookiecutter.package_slug }}/: __init__.py  __main__.py  _options.py  paths.py  readme.md  version.txt
