[tool.poetry]
name = "{{ cookiecutter.package_slug }}"
version = "0.1.0"
description = "{{ cookiecutter.description }}"
authors = ["{{ cookiecutter.author }}"]
license = "{{ cookiecutter.license }}"
packages = [{ include = "{{ cookiecutter.package_slug }}" }]

[tool.poetry.dependencies]
python = "^{{ cookiecutter.python_min_version }}"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
{{ cookiecutter.project_slug }} = "{{ cookiecutter.package_slug }}.__main__:run"
